# media-organizer

./: .axeconfig  .gitignore  API_REFERENCE.md  BUILD_STATUS.md  CLAUDE.md  CROSS_PLATFORM_COMPATIBILITY_COMPLETION.md  Cargo.toml  Cargo_backup.toml  Cargo_minimal.toml  DESIGN_ARCHITECTURE.md  DESIGN_COMPONENTS.md  DESIGN_PREVIEW_SERVICES.md  DESIGN_STATE_MANAGEMENT.md  DESIGN_SYSTEM_ARCHITECTURE.md  DEVELOPMENT_ESTIMATES.md  DEVELOPMENT_WORKFLOW.md  HIGH_CONTRAST_VALIDATION.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_TESTING_COMPLETION.md  MEMORY_OPTIMIZATION_COMPLETION.md  Makefile  NativeMenu.md  PERFORMANCE_ANALYSIS_TASK_22_1.md  PERFORMANCE_VALIDATION.md  PREVIEW_SERVICE_INTEGRATION.md  PROJECT_INDEX.md  README.md  USER_ACCEPTANCE_TESTING_COMPLETION.md  b-run.sh  build.sh  c-run.sh  feedback_upgrade.md  final_performance_validation.rs  media_organizer_requirements.md  package.json  performance_monitor.rs  test_cross_platform  test_icon_display  test_icon_display.rs  test_integration_workflow  (+8 more)
.claude/: UPGRADE-001-TASKS.md  UPGRADE-001.md  UPGRADE-002.md  UPGRADE-003.md  git-commit.md
.claude/commands/: git-commit.md
.github/workflows/: accessibility.yml  cross-platform-ci.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt  task-20-3-design-summary.md  task-20-5-validation-report.md  ui-audit-scope-criteria.md  ui-redundancy-inventory-report.md  ui-replacement-accessibility-specs.md  ui-replacement-designs.md  upgrade-003-prd.txt
.taskmaster/docs/research/: 2025-09-08_how-to-integrate-native-system-menu-bars-in-dioxus.md  2025-09-08_what-are-the-correct-apis-to-use-for-configuring-d.md
.taskmaster/reports/: performance-accessibility-improvements.md  task-complexity-report.json
.taskmaster/tasks/: tasks.json
assets/: dynamic-theme.css  styles.css
docs/: ICON_PACK_GUIDE.md  LAYOUT_STATE_DESIGN.md  user_evaluation_forms.md
minimal/: Cargo.toml
minimal/src/: main.rs
public/assets/: styles.css
src/: lib.rs  lib_minimal.rs  main.rs  main_minimal.rs  utils.rs
src/models/: config.rs
src/performance/: mod.rs  rendering_optimizations.rs
src/services/: background.rs  cache.rs  duplicate_detection.rs  file_system.rs  gpu_preview.rs  hashing.rs  memory_optimizer.rs  mod.rs  operations.rs  performance_benchmarks.rs  preview_cache.rs  preview_service.rs  progressive_loader.rs  ui_profiler.rs  validation_profiler.rs  validation_runner.rs
src/services/preview/: archive.rs  audio.rs  core.rs  fallback.rs  image.rs  integration_tests.rs  metadata_display.rs  mod.rs  pdf.rs  text.rs  thumbnail_service.rs  video.rs
src/services/shaders/: image_fragment.wgsl  image_vertex.wgsl
src/state/: app_state.rs  batch_optimizer.rs  benchmarks.rs  context.rs  layout_manager.rs  mod.rs  navigation.rs  performance.rs  performance_docs.md  persistence.rs  signal_optimization.rs  test_validation_summary.md  testing_documentation.md  tests.rs
src/theme/: color_theme.rs  mod.rs  theme_implementations.rs  theme_manager.rs
src/ui/: app.rs  icon_manager.rs  icon_packs.rs  icons.rs  interactive_app.rs  mod.rs  phase2_app.rs  shortcut_handler.rs  shortcuts.rs  simple_app.rs  vscode_app.rs  vscode_layout.rs
src/ui/components/: command_palette.rs  context_menu.rs  dialogs.rs  drag_drop.rs  duplicate_manager.rs  dynamic_content_panel.rs  empty_file_tree.rs  file_tree.rs  file_tree_simple.rs  icon_pack_manager.rs  info_panel.rs  menu_bar.rs  mod.rs  preview_panel.rs  settings_dialog.rs  (+6 more)
src/utils/: file_type_detection.rs  path_utils.rs
test_encoding/: emoji_test.txt
test_files/: .editorconfig  .gitignore  LICENSE  README.md  cargo.toml  code_file.rs  docker-compose.yml  dockerfile  json_file.json  package-lock.json  package.json  test.7z  test.avi  test.bat  test.c  test.cpp  test.cs  test.css  test.db  test.doc  test.go  test.html  test.ini  test.java  test.js  test.json  test.jsx  test.kt  test.php  test.pptx  test.ps1  test.py  test.rb  test.rs  test.scss  test.sh  test.sql  test.svelte  test.swift  test.tar  (+9 more)
tests/: accessibility_tests.rs  cross_platform_tests.rs  integration_workflow_tests.rs  memory_optimization_tests.rs  performance_validation_tests.rs  state_management_tests.rs  state_validation_tests.rs  ui_component_tests.rs  user_acceptance_tests.rs
tests/accessibility/: axe_rules.rs  mod.rs  test_scenarios.rs
