[package]
name = "media-organizer"
version = "0.1.0"
edition = "2021"
description = "Cross-platform media/file management application with VS Code-style interface"
license = "MIT"
repository = "https://github.com/organization/media-organizer"
authors = ["MediaOrganizer Team"]
keywords = ["file-manager", "media", "cross-platform", "dioxus", "rust"]
categories = ["gui", "filesystem"]

[dependencies]
# UI Framework
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-desktop = "0.6.3"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# File System Operations
walkdir = "2.4"
notify = "6.1"
dirs = "5.0"

# Media Processing
image = { version = "0.24", features = ["jpeg", "png", "gif", "webp", "tiff", "bmp"] }
ffmpeg-next = { version = "7.1", optional = true }
rodio = { version = "0.17", optional = true }

# Metadata Extraction
# exif = "0.6" # Not available, using simpler approach
id3 = "1.13"
symphonia = { version = "0.5", features = ["all"], optional = true }
chardet = "0.2"

# PDF Processing (optional)
pdf = { version = "0.9", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
num_cpus = "1.0"

# File system access for configuration persistence
# (Using standard library fs module)

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
rand = "0.8"

# Cross-platform
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[features]
default = ["video", "audio", "pdf", "metadata"]  # Test with updated ffmpeg-next version
video = ["dep:ffmpeg-next"]
audio = ["dep:rodio", "dep:symphonia"]
pdf = ["dep:pdf"]
metadata = ["dep:symphonia"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[[bin]]
name = "media-organizer"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"
